tg-837 en internacion-paciente mover llamados a endpoints al dialog

--- a/front-end/webapp/src/app/modules/internacion/dialogs/add-anthropometric/add-anthropometric.component.scss
+++ b/front-end/webapp/src/app/modules/internacion/dialogs/add-anthropometric/add-anthropometric.component.scss
@@ -1,3 +1,9 @@
+@import '../../../../../assets/styles/mixins.scss';
+
 mat-form-field {
 	width: 100%;
+}
+
+div.spinner {
+	@include centered-spinner;
 }
