--- a/front-end/webapp/src/app/modules/internacion/dialogs/add-anthropometric/add-anthropometric.component.html
+++ b/front-end/webapp/src/app/modules/internacion/dialogs/add-anthropometric/add-anthropometric.component.html
@@ -1,45 +1,53 @@
 <div mat-dialog-title>
 	<div class="mat-h2" [translate]="'internaciones.internacion-paciente.anthropometric-summary.ADD'"></div>
 </div>
-<div mat-dialog-content>
-	<form [formGroup]="form" (ngSubmit)="submit()">
-		<div>
-			<mat-form-field [floatLabel]="'never'" appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.BLOOD_TYPE'"></mat-label>
-				<mat-select placeholder="B+" formControlName="bloodType" name="bloodTypeId">
-					<mat-option *ngFor="let bloodType of bloodTypes" [value]="bloodType">
-						{{ bloodType.description }}
-					</mat-option>
-				</mat-select>
-			</mat-form-field>
-		</div>
-		<div>
-			<mat-form-field [floatLabel]="'never'" appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.HEIGHT'"></mat-label>
-				<input id="height"
-					   name="height"
-					   formControlName="height"
-					   placeholder="Ej: 180"
-					   maxlength="3"
-					   matInput>
-			</mat-form-field>
-		</div>
-		<div>
-			<mat-form-field [floatLabel]="'never'" appearance="outline">
-				<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.WEIGHT'"></mat-label>
-				<input id="weight"
-					   name="weight"
-					   formControlName="weight"
-					   placeholder="Ej: 70"
-					   maxlength="3"
-					   matInput>
-			</mat-form-field>
-		</div>
-	</form>
+
+<div class="spinner" *ngIf="loading else addAnthropometric">
+	<mat-spinner color="primary"></mat-spinner>
 </div>
-<mat-dialog-actions align="end">
-	<button mat-stroked-button color="primary" mat-dialog-close><span [translate]="'buttons.CANCEL'"></span></button>
-	<button *ngIf="this.form.valid" mat-raised-button color="primary" (click)="submit()">
-		<span [translate]="'buttons.ADD'"></span>
-	</button>
-</mat-dialog-actions>
+
+<ng-template #addAnthropometric>
+	<div mat-dialog-content>
+		<form [formGroup]="form" (ngSubmit)="submit()">
+			<div>
+				<mat-form-field [floatLabel]="'never'" appearance="outline">
+					<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.BLOOD_TYPE'"></mat-label>
+					<mat-select placeholder="B+" formControlName="bloodType" name="bloodTypeId">
+						<mat-option *ngFor="let bloodType of bloodTypes" [value]="bloodType">
+							{{ bloodType.description }}
+						</mat-option>
+					</mat-select>
+				</mat-form-field>
+			</div>
+			<div>
+				<mat-form-field [floatLabel]="'never'" appearance="outline">
+					<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.HEIGHT'"></mat-label>
+					<input id="height"
+						   name="height"
+						   formControlName="height"
+						   placeholder="Ej: 180"
+						   maxlength="3"
+						   matInput>
+				</mat-form-field>
+			</div>
+			<div>
+				<mat-form-field [floatLabel]="'never'" appearance="outline">
+					<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.WEIGHT'"></mat-label>
+					<input id="weight"
+						   name="weight"
+						   formControlName="weight"
+						   placeholder="Ej: 70"
+						   maxlength="3"
+						   matInput>
+				</mat-form-field>
+			</div>
+		</form>
+	</div>
+	<mat-dialog-actions align="end">
+		<button mat-stroked-button color="primary" mat-dialog-close><span [translate]="'buttons.CANCEL'"></span>
+		</button>
+		<button *ngIf="this.form.valid" mat-raised-button color="primary" (click)="submit()">
+			<span [translate]="'buttons.ADD'"></span>
+		</button>
+	</mat-dialog-actions>
+</ng-template>
