--- a/front-end/webapp/src/app/modules/internacion/dialogs/add-vital-signs/add-vital-signs.component.html
+++ b/front-end/webapp/src/app/modules/internacion/dialogs/add-vital-signs/add-vital-signs.component.html
@@ -2,8 +2,13 @@
 	<div class="mat-h2" [translate]="'internaciones.internacion-paciente.vital-signs-summary.UPDATE'"></div>
 </div>
 
-<div mat-dialog-content class="vital-signs mat-body">
-	<form [formGroup]="form" (ngSubmit)="submit()">
+<div class="spinner" *ngIf="loading else addVitalSigns">
+	<mat-spinner color="primary"></mat-spinner>
+</div>
+
+<ng-template #addVitalSigns>
+	<div mat-dialog-content class="vital-signs mat-body">
+		<form [formGroup]="form" (ngSubmit)="submit()">
 			<div class="row-container">
 				<div class="field-container" formGroupName="heartRate">
 					<mat-label [translate]="'internaciones.anamnesis.vital-signs.form.HEART_RATE'"></mat-label>
@@ -15,7 +20,8 @@
 							   type="number"
 							   matInput>
 					</mat-form-field>
-					<app-effective-time	[model]="form.value.heartRate.effectiveTime" (onChange)="setVitalSignEffectiveTime($event, 'heartRate')"></app-effective-time>
+					<app-effective-time [model]="form.value.heartRate.effectiveTime"
+										(onChange)="setVitalSignEffectiveTime($event, 'heartRate')"></app-effective-time>
 				</div>
 				<div class="field-container" formGroupName="respiratoryRate">
 					<mat-label [translate]="'internaciones.anamnesis.vital-signs.form.RESPIRATORY_RATE'"></mat-label>
@@ -27,7 +33,8 @@
 							   type="number"
 							   matInput>
 					</mat-form-field>
-					<app-effective-time	[model]="form.value.respiratoryRate.effectiveTime" (onChange)="setVitalSignEffectiveTime($event, 'respiratoryRate')"></app-effective-time>
+					<app-effective-time [model]="form.value.respiratoryRate.effectiveTime"
+										(onChange)="setVitalSignEffectiveTime($event, 'respiratoryRate')"></app-effective-time>
 				</div>
 			</div>
 
@@ -42,7 +49,8 @@
 							   type="number"
 							   matInput>
 					</mat-form-field>
-					<app-effective-time	[model]="form.value.temperature.effectiveTime" (onChange)="setVitalSignEffectiveTime($event, 'temperature')"></app-effective-time>
+					<app-effective-time [model]="form.value.temperature.effectiveTime"
+										(onChange)="setVitalSignEffectiveTime($event, 'temperature')"></app-effective-time>
 				</div>
 				<div class="field-container" formGroupName="bloodOxygenSaturation">
 					<mat-label
@@ -55,7 +63,8 @@
 							   type="number"
 							   matInput>
 					</mat-form-field>
-					<app-effective-time	[model]="form.value.bloodOxygenSaturation.effectiveTime" (onChange)="setVitalSignEffectiveTime($event, 'bloodOxygenSaturation')"></app-effective-time>
+					<app-effective-time [model]="form.value.bloodOxygenSaturation.effectiveTime"
+										(onChange)="setVitalSignEffectiveTime($event, 'bloodOxygenSaturation')"></app-effective-time>
 				</div>
 			</div>
 
@@ -71,7 +80,8 @@
 							   type="number"
 							   matInput>
 					</mat-form-field>
-					<app-effective-time	[model]="form.value.systolicBloodPressure.effectiveTime" (onChange)="setVitalSignEffectiveTime($event, 'systolicBloodPressure')"></app-effective-time>
+					<app-effective-time [model]="form.value.systolicBloodPressure.effectiveTime"
+										(onChange)="setVitalSignEffectiveTime($event, 'systolicBloodPressure')"></app-effective-time>
 				</div>
 				<div class="field-container" formGroupName="diastolicBloodPressure">
 					<mat-label
@@ -84,14 +94,17 @@
 							   type="number"
 							   matInput>
 					</mat-form-field>
-					<app-effective-time	[model]="form.value.diastolicBloodPressure.effectiveTime" (onChange)="setVitalSignEffectiveTime($event, 'diastolicBloodPressure')"></app-effective-time>
+					<app-effective-time [model]="form.value.diastolicBloodPressure.effectiveTime"
+										(onChange)="setVitalSignEffectiveTime($event, 'diastolicBloodPressure')"></app-effective-time>
 				</div>
 			</div>
-	</form>
-</div>
-<mat-dialog-actions align="end">
-	<button mat-stroked-button color="primary" mat-dialog-close><span [translate]="'buttons.CANCEL'"></span></button>
-	<button *ngIf="this.form.valid" mat-raised-button color="primary" (click)="submit()">
-		<span [translate]="'buttons.UPDATE'"></span>
-	</button>
-</mat-dialog-actions>
+		</form>
+	</div>
+	<mat-dialog-actions align="end">
+		<button mat-stroked-button color="primary" mat-dialog-close><span [translate]="'buttons.CANCEL'"></span>
+		</button>
+		<button *ngIf="this.form.valid" mat-raised-button color="primary" (click)="submit()">
+			<span [translate]="'buttons.UPDATE'"></span>
+		</button>
+	</mat-dialog-actions>
+</ng-template>
