tg-844 Refactorizacion de texto comun en documentos de internacion - PDF

--- a/back-end/hospital-api/src/main/resources/templates/epicrisis-chaco.html
+++ b/back-end/hospital-api/src/main/resources/templates/epicrisis-chaco.html
@@ -1,150 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
+
 <head>
-    <title>Report</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
-
-    <style>
-		h3 {
-			padding-top:15px
-		}
-	</style>
+    <th:block th:include="fragments/general.html :: headerfiles"></th:block>
 </head>
 <body>
-
-    <h2>Epicrisis</h2>
-    <p>Alta de internación</p>
-
-    <h3>Adulto Mayor</h3>
-    <div class="row" th:if="${patient.person != null}">
-        <strong>- ID: </strong><label  th:text="${patient.id}"></label><br/>
-        <strong>- Nombre: </strong><label  th:text="${patient.person.firstName}"></label><br/>
-        <strong>- Apellido: </strong><label th:text="${patient.person.lastName}"></label><br/>
-        <strong>- Edad: </strong><label th:text="${patient.person.age}"></label><br/>
-        <strong>- Sexo: </strong><label  th:text="${patient.person.gender.description}"></label><br/>
-    </div>
-
-    <h3 th:text="${#strings.defaultString(#messages.msgOrNull('document.pdf.diagnosis.title.tandil'),'Enfermedades')}"></h3>
-    <div class="row" th:if="${#lists.isEmpty(diagnosis)}">
-        <dl class="lista" >
-            <dd><p >Sin cambios registrados</p></dd>
-        </dl>
-    </div>
-    <div class="row" th:if="${not #lists.isEmpty(diagnosis)}">
-        <dl th:each="diagnose,iter: ${diagnosis}">
-            <dd><p  th:text="${'-' + diagnose.snomed.pt}"></p></dd>
-            <dl>
-                <dd><strong>Estado: </strong><label  th:text="${diagnose.status}"></label></dd>
-                <dd><strong>Verificación: </strong><label  th:text="${diagnose.verification}"></label></dd>
-            </dl>
-        </dl>
-    </div>
-
-    <h3>Antecedentes personales</h3>
-    <div class="row" th:if="${#lists.isEmpty(personalHistories)}">
-        <dl>
-            <dd><p >Sin cambios registrados</p></dd>
-        </dl>
-    </div>
-    <div class="row" th:if="${not #lists.isEmpty(personalHistories)}">
-        <dl th:each="personalHistory,iter: ${personalHistories}">
-            <dd><p  th:text="${'- ' + personalHistory.snomed.pt}"></p></dd>
-        </dl>
-    </div>
-
-    <h3>Antecedentes familiares</h3>
-    <div class="row" th:if="${#lists.isEmpty(familyHistories)}">
-        <dd><p>Sin cambios registrados</p></dd>
-    </div>
-    <div class="row" th:if="${not #lists.isEmpty(familyHistories)}" >
-        <dl th:each="familyHistory,iter: ${familyHistories}">
-            <dd><p  th:text="${'- ' +familyHistory.snomed.pt}"></p></dd>
-        </dl>
-    </div>
-
-    <h3>Alergias</h3>
-    <div class="row" th:if="${#lists.isEmpty(allergies)}">
-        <dl>
-            <dd><p >Sin cambios registrados</p></dd>
-        </dl>
-    </div>
-    <div class="row" th:if="${not #lists.isEmpty(allergies)}">
-        <dl class="lista" th:each="allergy,iter: ${allergies}">
-            <dd><p  th:text="${'- ' + allergy.snomed.pt}"></p></dd>
-            <dl>
-                <dd><strong>Estado: </strong><label  th:text="${allergy.status}"></label></dd>
-                <dd><strong>Verificación: </strong><label  th:text="${allergy.verification}"></label></dd>
-            </dl>
-        </dl>
-    </div>
-
-
-    <h3>Vacunas</h3>
-    <div class="row" th:if="${#lists.isEmpty(inmunizations)}">
-        <dl>
-            <dd><p>Sin cambios registrados</p></dd>
-        </dl>
-    </div>
-    <div class="row" th:if="${not #lists.isEmpty(inmunizations)}">
-        <dl th:each="inmunization,iter: ${inmunizations}">
-            <dd><p  th:text="${'- ' + inmunization.snomed.pt}"></p></dd>
-            <dl>
-                <dd><strong>Fecha de administración: </strong><label th:text="${inmunization.administrationDate}"></label></dd>
-            </dl>
-        </dl>
-    </div>
-
-    <h3>Medicación ambulatoria</h3>
-    <div class="row" th:if="${#lists.isEmpty(medications)}">
-        <dl>
-            <dd><p>Sin cambios registrados</p></dd>
-        </dl>
-    </div>
-    <div class="row" th:if="${not #lists.isEmpty(medications)}">
-        <dl th:each="medication,iter: ${medications}">
-            <dd><p  th:text="${'- ' + medication.snomed.pt}"></p></dd>
-            <dl>
-                <dd><strong>Observaciones: </strong><label  th:text="${medication.note}"></label></dd>
-            </dl>
-        </dl>
-    </div>
-
-    <h3>Observaciones</h3>
-    <div class="row" th:if="${notes == null}">
-        <dl>
-            <dd><p>Sin cambios registrados</p></dd>
-        </dl>
-    </div>
-    <div class="row" th:if="${notes != null}">
-        <div class="col-12" th:if="${notes.evolutionNote}">
-            <strong class="center-padding">Evolución</strong>
-            <p class="center-padding" th:text="${notes.evolutionNote}"></p>
-        </div>
-        <div class="col-12" th:if="${notes.studiesSummaryNote}">
-            <strong class="center-padding">Resumen de estudios y procedimientos realizados</strong>
-            <p class="center-padding" th:text="${notes.studiesSummaryNote}"></p>
-        </div>
-        <div class="col-12 " th:if="${notes.physicalExamNote}">
-            <strong class="center-padding">Examen físico</strong>
-            <p class="center-padding" th:text="${notes.physicalExamNote}"></p>
-        </div>
-        <div class="col-12" th:if="${notes.indicationsNote}">
-            <strong class="center-padding">Indicaciones de alta</strong>
-            <p class="center-padding" th:text="${notes.indicationsNote}"></p>
-        </div>
-        <div class="col-12" th:if="${notes.otherNote}">
-            <strong class="center-padding">Otras observaciones</strong>
-            <p class="center-padding" th:text="${notes.otherNote}"></p>
-        </div>
-    </div>
+    <div th:replace="fragments/general.html :: header(title=Epicrisis, subtitle='Alta de internación')"></div>
+    <div th:replace="fragments/general.html :: personalData(patientType='Adulto Mayor')"></div>
+    <div th:replace="fragments/general.html :: diagnosis(message=document.pdf.diagnosis.title.chaco)"></div>
+    <div th:replace="fragments/general.html :: personalHistory"></div>
+    <div th:replace="fragments/general.html :: familyHistory"></div>
+    <div th:replace="fragments/general.html :: allergies"></div>
+    <div th:replace="fragments/general.html :: inmunizations"></div>
+    <div th:replace="fragments/general.html :: medications(title='Medicación ambulatoria')"></div>
+    <div th:replace="fragments/general.html :: notes-epicrisis"></div>
 </body>
-<footer class="footer-dark" th:if="${author != null}">
-    <div th:replace="fragments/author.html
-	:: author(firstName=${author.firstName}, lastName=${author.lastName},licenseNumber=${author.licence})">
-    </div>
+<footer>
+    <div th:replace="fragments/general.html :: footer"></div>
 </footer>
 </html>
