--- a/back-end/hospital-api/src/main/resources/templates/fragments/author.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/author.html
@@ -2,6 +2,6 @@
 <html lang="es">
     <div class="container" th:fragment="author (firstName, lastName, licenseNumber)" style="text-align:right">
         <br/><br/><strong>Profesional: </strong><label class="center-padding" th:text="${lastName + ' '}"></label><label th:text="${firstName}"></label>
-        <p><strong>Licencia: </strong><label class="center-padding" th:text="${licenseNumber}"></label></p>
+        <p><strong>Matricula: </strong><label class="center-padding" th:text="${licenseNumber}"></label></p>
     </div>
 </html>
