tg-846 implementar dialog add-vaccine

--- a/front-end/webapp/src/app/modules/internacion/components/vacunas-summary/vacunas-summary.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/vacunas-summary/vacunas-summary.component.html
@@ -1,4 +1,7 @@
-<app-summary-card [header]="vacunasSummary">
+<app-summary-card [header]="vacunasSummary"
+				  [canEdit]="['ENFERMERO_ADULTO_MAYOR', 'ESPECIALISTA_MEDICO']"
+				  [editable]="editable"
+				  (openInNew)="openDialog()">
 	<app-table [model]="tableModel" *ngIf="tableModel?.data.length > 0 else noInfo"></app-table>
 	<ng-template #noInfo>
 		<app-no-data></app-no-data>
