--- a/front-end/webapp/src/app/modules/internacion/dialogs/add-inmunization/add-inmunization.component.html
+++ b/front-end/webapp/src/app/modules/internacion/dialogs/add-inmunization/add-inmunization.component.html
@@ -1,34 +1,45 @@
 <div mat-dialog-title>
-	<div class="mat-h2" [translate]="'internaciones.internacion-paciente.alergias-summary.ADD'"></div>
+	<div class="mat-h2" [translate]="'internaciones.internacion-paciente.vacunas-summary.ADD'"></div>
 </div>
 
-<div class="spinner" *ngIf="loading else addAllergy">
+<div class="spinner" *ngIf="loading else addInmunization">
 	<mat-spinner color="primary"></mat-spinner>
 </div>
 
-<ng-template #addAllergy>
+<ng-template #addInmunization>
 	<div mat-dialog-content>
-		<app-concepts-search *ngIf="!snomedConcept else alergiasForm"
-							 [label]="'internaciones.anamnesis.alergias.ALLERGY'"
+		<app-concepts-search *ngIf="!snomedConcept else inmunizationForm"
+							 [label]="'internaciones.anamnesis.vacunas.INMUNIZATION'"
 							 (search)=onSearch($event)>
 		</app-concepts-search>
 
 		<div class="spinner">
 			<mat-spinner diameter="70" color="primary" *ngIf="searching"></mat-spinner>
 		</div>
+
 		<app-table *ngIf="!searching && !snomedConcept" [model]="conceptsResultsTable"
 				   [mainStyle]="'secondary'"></app-table>
 
-		<ng-template #alergiasForm>
+		<ng-template #inmunizationForm>
 			<form [formGroup]="form" (ngSubmit)="submit()">
 				<mat-form-field appearance="outline">
-					<mat-label [translate]="'internaciones.anamnesis.alergias.ALLERGY'">
-					</mat-label>
+					<mat-label [translate]="'internaciones.internacion-paciente.vacunas-summary.INMUNIZATION'"></mat-label>
 					<input matInput type="text" formControlName="snomed" name="snomed" readonly>
 					<button id="clear" mat-button matSuffix color="warn" mat-icon-button
 							(click)="resetForm()">
 						<mat-icon>close</mat-icon>
 					</button>
+				</mat-form-field>
+
+				<mat-form-field appearance="outline">
+					<mat-label [translate]="'internaciones.internacion-paciente.vacunas-summary.REGISTRY_DATE'">
+					</mat-label>
+					<input matInput id="date" [matDatepicker]="myDatepicker" formControlName="date"
+						   [max]="this.today">
+					<mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
+					<mat-datepicker #myDatepicker startView="multi-year" (yearSelected)="chosenYearHandler($event)"
+									(monthSelected)="chosenMonthHandler($event)">
+					</mat-datepicker>
 				</mat-form-field>
 			</form>
 		</ng-template>
