--- a/front-end/webapp/src/app/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/epicrisis-form/epicrisis-form.component.html
@@ -5,26 +5,21 @@
 			<h3 [translate]="'internaciones.epicrisis.SUBTITLE'"></h3>
 		</section>
 
-		<section id="mainDiagnosis">
-			<h2 class="mat-h2" [translate]="'internaciones.epicrisis.diagnosticos.TITLE_PRINCIPAL'"></h2>
-			<mat-card class="main-diagnosis">
-				<mat-card-content>
-					<mat-form-field appearance="outline">
-						<input matInput
-							   type="text"
-							   formControlName="snomed"
-							   name="snomed"
-							   readonly
-							   matTooltip="{{ this.form.value.snomed }}"
-						>
-					</mat-form-field>
-				</mat-card-content>
-			</mat-card>
-		</section>
-
 		<section id="diagnosticos">
 			<h2 class="mat-h2" [translate]="'internaciones.epicrisis.diagnosticos.TITLE'"></h2>
+
 			<table mat-table [dataSource]="diagnosis.data" class="secondary">
+				<mat-radio-group formControlName="mainDiagnosis">
+
+				<ng-container matColumnDef="mainDiagnosis">
+					<th *matHeaderCellDef>Principal</th>
+					<td mat-cell *matCellDef="let row">
+						<mat-radio-button [value]="row"
+										  [disabled]="!isActive(row)"
+										  (change)="setConfirmed(row)">
+						</mat-radio-button>
+					</td>
+				</ng-container>
 
 				<ng-container *ngFor="let column of diagnosis.columns" [matColumnDef]="column.def">
 					<th *matHeaderCellDef>{{ column.header | translate }}</th>
@@ -37,7 +32,7 @@
 				<ng-container matColumnDef="select">
 					<th mat-header-cell class="actions" *matHeaderCellDef>
 						<mat-checkbox *ngIf="diagnosis.data.length !== 0"
-									  (change)="$event ? masterToggle(diagnosis.data, diagnosis.selection) : null"
+									  (change)="$event ? diagnosisMasterToggle() : null"
 									  [checked]="diagnosis.selection.hasValue() && isAllSelected(diagnosis.data, diagnosis.selection)"
 									  [indeterminate]="diagnosis.selection.hasValue() && !isAllSelected(diagnosis.data, diagnosis.selection)">
 						</mat-checkbox>
@@ -45,10 +40,13 @@
 					<td mat-cell class="actions" *matCellDef="let row">
 						<mat-checkbox (click)="$event.stopPropagation()"
 									  (change)="$event ? diagnosis.selection.toggle(row) : null"
-									  [checked]="diagnosis.selection.isSelected(row)">
+									  [checked]="diagnosis.selection.isSelected(row)"
+									  [disabled]="row.id === form.value.mainDiagnosis?.id">
 						</mat-checkbox>
 					</td>
 				</ng-container>
+				</mat-radio-group>
+
 			</table>
 			<app-no-data class="secondary" *ngIf="diagnosis.data.length === 0"></app-no-data>
 
