tg-877 fix non-unique id en radio button gender

--- a/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/routes/search/search.component.html
@@ -46,7 +46,7 @@
 				</mat-label>
 				<div class="">
 					<mat-radio-group name="genderId" id="genderId" formControlName="genderId">
-						<mat-radio-button id="genderButton" *ngFor="let gender of genderOptions" [value]="gender.id">
+						<mat-radio-button id="genderButton_{{gender.id}}" *ngFor="let gender of genderOptions" [value]="gender.id">
 							{{gender.description}}
 						</mat-radio-button>
 					</mat-radio-group>
