tg-878 [Mejora] Ajuste de ubicacion de constantes

--- a/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
@@ -7,7 +7,7 @@
 			</div>
 		</mat-card-title>
 		<ng-container *featureFlag="'habilitarBotonCovidDiagnosticoPresuntivo'">
-			<div *ngIf="covidAlert">
+			<div *ngIf="hasCovidAlert">
 				<button mat-icon-button (click)="covidAlertEvent.emit()">
 					<span class="material-icons">
 						pest_control
