--- a/front-end/webapp/src/app/modules/internacion/components/diagnosis-summary/diagnosis-summary.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/diagnosis-summary/diagnosis-summary.component.html
@@ -1,4 +1,4 @@
-<app-summary-card [header]="diagnosticosSummary" [covidAlert]="viewCovidAlert"
+<app-summary-card [header]="diagnosticosSummary" [hasCovidAlert]="viewCovidAlert"
 	(covidAlertEvent)="generateDiagnosisCovid()">
 	<app-table [model]="tableModel" *ngIf="tableModel?.data.length > 0 else noInfo"></app-table>
 	<ng-template #noInfo>
