tg-905 [Mejora] Refresca componente de Evoluciones en pantalla de Internacion

--- a/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
@@ -9,9 +9,7 @@
 		<ng-container *featureFlag="'habilitarBotonCovidDiagnosticoPresuntivo'">
 			<div *ngIf="hasCovidAlert">
 				<button mat-icon-button (click)="covidAlertEvent.emit()">
-					<span class="material-icons">
-						pest_control
-					</span>
+					<mat-icon matListIcon fontSet="material-icons-outlined">pest_control</mat-icon>
 				</button>
 				<span [translate]="'internaciones.alerta-covid.TITLE'">  </span>
 			</div>
