tg-907 ocultar filtro diagnostico principal para geriatricos

--- a/front-end/webapp/src/app/modules/internacion/components/documents-summary/documents-summary.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/documents-summary/documents-summary.component.html
@@ -38,7 +38,7 @@
 						</mat-option>
 					</mat-select>
 				</mat-form-field>
-				<div class="main-diagnosis-toggle">
+				<div *featureFlag="'habilitarToggleFiltroDiagnosticoPrincipal'" class="main-diagnosis-toggle">
 					<mat-label>Diagnóstico principal</mat-label>
 					<mat-slide-toggle formControlName="mainDiagnosisOnly" (change)="updateDocuments()">
 					</mat-slide-toggle>
