tg-934 [Mejora] texto clickable en boton de presuntivo Covid

--- a/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.scss
@@ -4,5 +4,9 @@ mat-card {
 		justify-content: space-between;
 		align-items: center;
 		max-height: 24px;
+
+		.presumptive-button {
+			width: auto;
+		}
 	}
 }
