--- a/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
@@ -8,10 +8,10 @@
 		</mat-card-title>
 		<ng-container *featureFlag="'habilitarBotonCovidDiagnosticoPresuntivo'">
 			<div *ngIf="hasCovidAlert">
-				<button mat-icon-button (click)="covidAlertEvent.emit()">
+				<button class="presumptive-button" mat-icon-button (click)="covidAlertEvent.emit()">
 					<mat-icon matListIcon fontSet="material-icons-outlined">pest_control</mat-icon>
+					<span [translate]="'internaciones.alerta-covid.TITLE'"> </span>
 				</button>
-				<span [translate]="'internaciones.alerta-covid.TITLE'">  </span>
 			</div>
 		</ng-container>
 		<ng-container *ngIf="!editable">
