--- a/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -32,22 +32,42 @@
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
 							<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.HEIGHT'"></mat-label>
 							<input id="height"
-							name="height"
-							formControlName="height"
-							placeholder="Ej: 180"
-							maxlength="3"
-							matInput>
+							       name="height"
+							       formControlName="height"
+							       placeholder="Ej: 180"
+							       type="number"
+							       matInput>
+							<mat-error
+									*ngIf="hasError(this.form.controls.anthropometricData, 'min', 'height')"
+									[translate]="'forms.MIN_ERROR'"
+									[translateParams]="{min: getError(this.form.controls.anthropometricData, 'min', 'height').min}">
+							</mat-error>
+							<mat-error
+									*ngIf="hasError(this.form.controls.anthropometricData, 'max', 'height')"
+									[translate]="'forms.MAX_ERROR'"
+									[translateParams]="{max: getError(this.form.controls.anthropometricData, 'max', 'height').max}">
+							</mat-error>
 						</mat-form-field>
 					</div>
 					<div>
 						<mat-form-field [floatLabel]="'never'" appearance="outline">
 							<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.WEIGHT'"></mat-label>
 							<input id="weight"
-							name="weight"
-							formControlName="weight"
-							placeholder="Ej: 70"
-							maxlength="3"
-							matInput>
+							       name="weight"
+							       formControlName="weight"
+							       placeholder="Ej: 70"
+							       type="number"
+							       matInput>
+							<mat-error
+									*ngIf="hasError(this.form.controls.anthropometricData, 'min', 'weight')"
+									[translate]="'forms.MIN_ERROR'"
+									[translateParams]="{min: getError(this.form.controls.anthropometricData, 'min', 'weight').min}">
+							</mat-error>
+							<mat-error
+									*ngIf="hasError(this.form.controls.anthropometricData, 'max', 'weight')"
+									[translate]="'forms.MAX_ERROR'"
+									[translateParams]="{max: getError(this.form.controls.anthropometricData, 'max', 'weight').max}">
+							</mat-error>
 						</mat-form-field>
 					</div>
 				</mat-card-content>
