tg-962 crea modulo historia-clinica para agrupar funcionalidad comun internación y ambulatoria

--- a/front-end/webapp/src/app/modules/historia-clinica/dialogs/remove-diagnosis/remove-diagnosis.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/dialogs/remove-diagnosis/remove-diagnosis.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../assets/styles/mixins.scss';
+@import '../../../../../assets/styles/mixins';
 
 div[mat-dialog-title] {
 	text-align: center;
