--- a/front-end/webapp/src/app/modules/historia-clinica/dialogs/add-anthropometric/add-anthropometric.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/dialogs/add-anthropometric/add-anthropometric.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../assets/styles/mixins.scss';
+@import '../../../../../assets/styles/mixins';
 
 mat-form-field {
 	width: 100%;
