--- a/front-end/webapp/src/app/modules/historia-clinica/dialogs/add-vital-signs/add-vital-signs.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/dialogs/add-vital-signs/add-vital-signs.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../assets/styles/mixins.scss';
+@import '../../../../../assets/styles/mixins';
 
 .vital-signs {
 	.row-container {
