--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -1,1 +1,23 @@
-<p>ambulatoria-paciente works!</p>
+<app-content width="full">
+	<section id="title">
+		<h2 class="page-title" [translate]="'ambulatoria.paciente.TITLE'"></h2>
+	</section>
+
+	<mat-card class="mat-typography">
+		<mat-card-content>
+			<mat-tab-group>
+				<mat-tab label="{{ 'ambulatoria.paciente.resumen.TITLE' | translate }}">
+					<ng-template matTabContent>
+						<app-resumen></app-resumen>
+					</ng-template>
+				</mat-tab>
+
+				<mat-tab label="{{ 'ambulatoria.paciente.problemas.TITLE' | translate }}">
+					<ng-template matTabContent>
+						<app-problemas></app-problemas>
+					</ng-template>
+				</mat-tab>
+			</mat-tab-group>
+		</mat-card-content>
+	</mat-card>
+</app-content>
